--- a/index.html
+++ b/index.html
@@ -9,26 +9,22 @@
     <title>Welcome To Bd Highlights</title>
 
     <!-- ==== css ==== -->
-
-    <!-- == remixicon css == -->
     <link rel="stylesheet" href="assets/css/remixicon.css">
-    <!-- == bootstrap css == -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <!-- == app.css == -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
 
 
     <h1>Hello , Live Deploy test !</h1>
+    <p>
+        Change CSS Dir
+    </p>
 
 
     <!-- ==== Script File ==== -->
-
-    <!-- == bootstrap.js == -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <!-- == app.js == -->
     <script src="assets/js/app.js"></script>
 </body>
 
