--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
     <div id="preloader">
         <div class="preloader-circle"></div>
     </div>
+    <div class="landing-wrap">
+        <div class="landing-content">
+            <h1>
+                Match <br>
+                Someone Magical!
+            </h1>
+            <button class="theme-btn">Login</button>
+            <a class="theme-btn" href="signup.html">
+                Signup
+            </a>
+        </div>
+        <div class="landing-bg" style="background-image: url('assets/images/landing/landing.svg');">
 
-
-    <h1>Hello , Live Deploy test !</h1>
-    <p>
-        Change CSS Dir
-    </p>
-
+        </div>
+    </div>
 
     <!-- ==== Script File ==== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
