--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 Signup
             </a>
         </div>
-        <div class="landing-bg" style="background-image: url('assets/images/landing/landing.svg');">
-
+        <div class="landing-bgs" style="background-image: url('assets/images/landing/landing.svgs');">
+            <img class="img-fluid" src="assets/images/landing/landing.svg" alt="">
         </div>
     </div>
 
