--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="landing-bgs" style="background-image: url('assets/images/landing/landing.svgs');">
-            <img class="img-fluid" src="assets/images/landing/a-couple-is-engaged-and-preparin.png" alt="">
+            <img class="img-fluid" src="assets/images/landing/landing.svg" alt="">
         </div>
     </div>
 
