Landing page complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Signup
             </a>
         </div>
-        <div class="landing-bgs" style="background-image: url('assets/images/landing/landing.svgs');">
+        <div class="landing-bg">
             <img class="img-fluid" src="assets/images/landing/landing.svg" alt="">
         </div>
     </div>
