Auth login page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
                 Match <br>
                 Someone Magical!
             </h1>
-            <button class="theme-btn">Login</button>
-            <a class="theme-btn" href="signup.html">
+            <!-- <button class="theme-btn">Login</button> -->
+            <a class="theme-btn" href="login.html">
+                Login
+            </a>
+            <a class="theme-btn bg-pink" href="signup.html">
                 Signup
             </a>
         </div>
