Menu Bottom fixed as ui faced width issue

--- a/todays-match.html
+++ b/todays-match.html
@@ -40,37 +40,77 @@
         </div>
     </header>
     <div class="container">
-        <h1>Todays Match</h1>
-        <div class="slider-wrap">
+        <div class="row">
+            <div class="col-12">
+                <!-- Main Content Start  -->
+                <div class="main-content">
+                    <h1>Todays Match</h1>
 
+                    <div>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut reprehenderit eaque labore
+                            perferendis qui veniam nulla, debitis dolor neque quo! Delectus necessitatibus neque ad ab,
+                            tempore quis explicabo ipsum reprehenderit dolorem fugit vero maiores sequi quas at dolor
+                            culpa rerum autem quisquam aliquid. Sapiente, dolore? Nam quibusdam quo ipsa similique
+                            impedit dignissimos eveniet ea ducimus incidunt sunt voluptatum repellat debitis, ex quaerat
+                            expedita accusamus velit atque quam eaque at deserunt quae nesciunt? Culpa modi nulla cumque
+                            aliquam harum vitae, eos tempora nihil quidem libero iure dolor totam? Quasi expedita quos
+                            velit earum aliquid accusamus numquam officiis? Ipsum molestiae perspiciatis repellendus
+                            recusandae consequuntur numquam ut, deleniti quo ipsam tempora voluptate dignissimos quasi
+                            error porro. Hic consequatur iusto explicabo aspernatur provident tempora atque, voluptatum
+                            voluptate praesentium quas labore aperiam, exercitationem illo quae tempore odio quo officia
+                            itaque quisquam recusandae totam? Reprehenderit dignissimos alias blanditiis quibusdam,
+                            quaerat fuga omnis, tenetur laborum doloremque in odio possimus expedita quisquam error
+                            provident perferendis soluta nemo debitis minima, incidunt sint consectetur? Alias similique
+                            facilis ex provident, soluta quasi eaque tenetur nulla praesentium accusantium quisquam
+                            repellat debitis mollitia fugiat at quaerat, commodi libero dolor aspernatur ipsum
+                            repellendus aliquid officiis. Voluptates ad dolorem itaque, temporibus repudiandae labore
+                            ducimus vero deserunt facilis placeat sint aspernatur, totam praesentium quam iusto
+                            dignissimos, tenetur voluptas sapiente molestiae libero et! Culpa voluptatem ad deleniti
+                            quaerat voluptate ipsum voluptatum iusto ipsa corrupti id impedit ipsam vero eos laboriosam,
+                            doloremque temporibus aspernatur commodi reprehenderit dicta earum libero incidunt. Velit
+                            dolore quo reiciendis eligendi id distinctio minima iure. Ut dolore aliquam, totam fugiat
+                            saepe suscipit eum provident iste, perspiciatis dolor asperiores iure culpa sunt iusto magni
+                            alias nobis quas, blanditiis consequatur assumenda tempore. Quisquam officia modi voluptatum
+                            saepe neque, voluptas vel, facilis praesentium tempore, laudantium dignissimos inventore
+                            eligendi ratione molestias rem impedit! Expedita perferendis excepturi eaque illum.
+                        </p>
+                    </div>
+                </div>
+                <!-- Footer Menu Start  -->
+                <div class="footer-bg">
+                    <section class="footer-wrap rounded-pill p-3">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="">
+                                <div class="menu-item active">
+                                    <i class="ri-calendar-todo-line"></i>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="menu-item">
+                                    <i class="ri-heart-3-line"></i>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="menu-item">
+                                    <i class="ri-pulse-line"></i>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="menu-item">
+                                    <i class="ri-send-plane-line"></i>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="menu-item">
+                                    <i class="ri-user-line"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </section>
+                </div>
+            </div>
         </div>
-        <footer class="footer-wrap rounded-pill p-3 d-flex justify-content-between align-items-center">
-            <a href="">
-                <div class="menu-item active">
-                    <i class="ri-home-line"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="menu-item">
-                    <i class="ri-home-line"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="menu-item">
-                    <i class="ri-home-line"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="menu-item">
-                    <i class="ri-home-line"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="menu-item">
-                    <i class="ri-home-line"></i>
-                </div>
-            </a>
-        </footer>
     </div>
 
     <!-- ==== Script File ==== -->
