--- a/todays-match.html
+++ b/todays-match.html
@@ -53,27 +53,36 @@
                         </div>
 
                         <div class="tinder--cards">
-                            <!-- For Background  -->
                             <div class="tinder--card">
-                                <div class="slider-card-image position-relative"
-                                    style="background-image: url('assets/images/user/1.png');">
-                                    <span class="slider-card-location">
-                                        <i class="ri-map-pin-2-line"></i> Orlando, USA
-                                    </span>
-                                    <span class="spotlight">Spotlight</span>
-
-                                </div>
-                                <div class="card-info">
-                                    <div class="d-flex justify-content-between w-100">
-                                        <div>
-                                            <a class="card-url" href="user-profile.html">
-                                                <h3 id="card-name">Ayesha Aermin</h3>
-                                            </a>
-                                            <p id="married-status">Never Married</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                <img src="https://placeimg.com/600/300/people">
+                                <h3>Demo card 1</h3>
+                                <p>This is a demo for Tinder like swipe cards</p>
                             </div>
+                            <div class="tinder--card">
+                                <img src="https://placeimg.com/600/300/animals">
+                                <h3>Demo card 2</h3>
+                                <p>This is a demo for Tinder like swipe cards</p>
+                            </div>
+                            <div class="tinder--card">
+                                <img src="https://placeimg.com/600/300/nature">
+                                <h3>Demo card 3</h3>
+                                <p>This is a demo for Tinder like swipe cards</p>
+                            </div>
+                            <div class="tinder--card">
+                                <img src="https://placeimg.com/600/300/tech">
+                                <h3>Demo card 4</h3>
+                                <p>This is a demo for Tinder like swipe cards</p>
+                            </div>
+                            <div class="tinder--card">
+                                <img src="https://placeimg.com/600/300/arch">
+                                <h3>Demo card 5</h3>
+                                <p>This is a demo for Tinder like swipe cards</p>
+                            </div>
+                        </div>
+
+                        <div class="tinder--buttons">
+                            <button id="nope"><i class="fa fa-remove"></i></button>
+                            <button id="love"><i class="fa fa-heart"></i></button>
                         </div>
                     </div>
                     <!-- Main Slider End -->
