Match real Main Slider for todays match done as ui

--- a/todays-match.html
+++ b/todays-match.html
@@ -53,31 +53,52 @@
                         </div>
 
                         <div class="tinder--cards">
-                            <div class="tinder--card">
-                                <img src="https://placeimg.com/600/300/people">
-                                <h3>Demo card 1</h3>
-                                <p>This is a demo for Tinder like swipe cards</p>
+                            <div class="tinder--card card-bg-1">
+                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/2.png');">
+                                </div>
+                                <div class="tinder--user-info">
+                                    <h3>Natasha Abigall</h3>
+                                    <p>Cape Town</p>
+                                </div>
                             </div>
-                            <div class="tinder--card">
-                                <img src="https://placeimg.com/600/300/animals">
-                                <h3>Demo card 2</h3>
-                                <p>This is a demo for Tinder like swipe cards</p>
+                            <div class="tinder--card card-bg-2">
+                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/3.png');">
+                                </div>
+                                <div class="tinder--user-info">
+                                    <h3>Natasha Abigall</h3>
+                                    <p>Cape Town</p>
+                                </div>
                             </div>
-                            <div class="tinder--card">
-                                <img src="https://placeimg.com/600/300/nature">
-                                <h3>Demo card 3</h3>
-                                <p>This is a demo for Tinder like swipe cards</p>
+                            <div class="tinder--card card-bg-3">
+                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/4.png');">
+                                </div>
+                                <div class="tinder--user-info">
+                                    <h3>Natasha Abigall</h3>
+                                    <p>Cape Town</p>
+                                </div>
                             </div>
-                            <div class="tinder--card">
-                                <img src="https://placeimg.com/600/300/tech">
-                                <h3>Demo card 4</h3>
-                                <p>This is a demo for Tinder like swipe cards</p>
+                            <div class="tinder--card card-bg-4">
+                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/5.png');">
+                                </div>
+                                <div class="tinder--user-info">
+                                    <a href="user-profile.html">
+                                        <h3>Abigall</h3>
+                                    </a>
+                                    <p>Cape Town</p>
+                                </div>
                             </div>
-                            <div class="tinder--card">
-                                <img src="https://placeimg.com/600/300/arch">
-                                <h3>Demo card 5</h3>
-                                <p>This is a demo for Tinder like swipe cards</p>
+
+                            <div class="tinder--card card-bg-4">
+                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/1.png');">
+                                </div>
+                                <div class="tinder--user-info">
+                                    <a href="user-profile.html">
+                                        <h3>Abigall</h3>
+                                    </a>
+                                    <p>Cape Town</p>
+                                </div>
                             </div>
+
                         </div>
 
                         <div class="tinder--buttons">
