--- a/todays-match.html
+++ b/todays-match.html
@@ -112,27 +112,27 @@
                 <div class="footer-bg">
                     <section class="footer-wrap rounded-pill p-3">
                         <div class="d-flex justify-content-between align-items-center">
-                            <a href="">
+                            <a href="todays-match.html">
                                 <div class="menu-item active">
                                     <i class="ri-calendar-todo-line"></i>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="my-match.html">
                                 <div class="menu-item">
                                     <i class="ri-heart-3-line"></i>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="activity.html">
                                 <div class="menu-item">
                                     <i class="ri-pulse-line"></i>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="message.html">
                                 <div class="menu-item">
                                     <i class="ri-send-plane-line"></i>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="profile.html">
                                 <div class="menu-item">
                                     <i class="ri-user-line"></i>
                                 </div>
