--- a/my-match.html
+++ b/my-match.html
@@ -46,9 +46,11 @@
 
                 <!-- Spotlight-btn  -->
                 <a href="spotlight.html">
-                    <div class="spotlight-btn">
-                        <p>
-                            Spotlight <span> > </span>
+                    <div class="spotlight-btn shadow-3">
+                        <p class="d-flex justify-content-between align-items-center">
+                            <span></span>
+                            Spotlight
+                            <span><i class="me-3 ri-arrow-right-s-line"></i></span>
                         </p>
                     </div>
                 </a>
@@ -64,48 +66,108 @@
 
                         <div class="tinder--cards">
                             <div class="tinder--card card-bg-1">
-                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/2.png');">
+                                <div class="tinder--user-dp user-dp-v2"
+                                    style="background-image: url('assets/images/user/2.png');">
                                 </div>
                                 <div class="tinder--user-info">
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
+                                </div>
+                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                    <button>
+                                        <img src="assets/images/icon/gift.svg" alt="">
+                                    </button>
+                                    <a href="message-view.html">
+                                        <img src="assets/images/icon/message.svg" alt="">
+                                    </a>
+                                    <button>
+                                        <img src="assets/images/icon/dollor.svg" alt="">
+                                    </button>
                                 </div>
                             </div>
                             <div class="tinder--card card-bg-2">
-                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/3.png');">
+                                <div class="tinder--user-dp user-dp-v2"
+                                    style="background-image: url('assets/images/user/3.png');">
                                 </div>
                                 <div class="tinder--user-info">
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
+                                </div>
+                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                    <button>
+                                        <img src="assets/images/icon/gift.svg" alt="">
+                                    </button>
+                                    <a href="message-view.html">
+                                        <img src="assets/images/icon/message.svg" alt="">
+                                    </a>
+                                    <button>
+                                        <img src="assets/images/icon/dollor.svg" alt="">
+                                    </button>
                                 </div>
                             </div>
                             <div class="tinder--card card-bg-3">
-                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/4.png');">
+                                <div class="tinder--user-dp user-dp-v2"
+                                    style="background-image: url('assets/images/user/4.png');">
                                 </div>
                                 <div class="tinder--user-info">
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
                                 </div>
+                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                    <button>
+                                        <img src="assets/images/icon/gift.svg" alt="">
+                                    </button>
+                                    <a href="message-view.html">
+                                        <img src="assets/images/icon/message.svg" alt="">
+                                    </a>
+                                    <button>
+                                        <img src="assets/images/icon/dollor.svg" alt="">
+                                    </button>
+                                </div>
                             </div>
                             <div class="tinder--card card-bg-4">
-                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/5.png');">
+                                <div class="tinder--user-dp user-dp-v2"
+                                    style="background-image: url('assets/images/user/5.png');">
                                 </div>
                                 <div class="tinder--user-info">
                                     <a href="user-profile.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
+                                </div>
+                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                    <button>
+                                        <img src="assets/images/icon/gift.svg" alt="">
+                                    </button>
+                                    <a href="message-view.html">
+                                        <img src="assets/images/icon/message.svg" alt="">
+                                    </a>
+                                    <button>
+                                        <img src="assets/images/icon/dollor.svg" alt="">
+                                    </button>
                                 </div>
                             </div>
 
                             <div class="tinder--card card-bg-4">
-                                <div class="tinder--user-dp" style="background-image: url('assets/images/user/1.png');">
+                                <div class="tinder--user-dp user-dp-v2"
+                                    style="background-image: url('assets/images/user/1.png');">
                                 </div>
                                 <div class="tinder--user-info">
                                     <a href="user-profile.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
+                                </div>
+                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                    <button>
+                                        <img src="assets/images/icon/gift.svg" alt="">
+                                    </button>
+                                    <a href="message-view.html">
+                                        <img src="assets/images/icon/message.svg" alt="">
+                                    </a>
+                                    <button>
+                                        <img src="assets/images/icon/dollor.svg" alt="">
+                                    </button>
                                 </div>
                             </div>
 
