--- a/my-match.html
+++ b/my-match.html
@@ -73,7 +73,7 @@
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
                                 </div>
-                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                <div class="tinder-user-interaction d-flex justify-content-evenly align-items-center">
                                     <button>
                                         <img src="assets/images/icon/gift.svg" alt="">
                                     </button>
@@ -93,7 +93,7 @@
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
                                 </div>
-                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                <div class="tinder-user-interaction d-flex justify-content-evenly align-items-center">
                                     <button>
                                         <img src="assets/images/icon/gift.svg" alt="">
                                     </button>
@@ -113,7 +113,7 @@
                                     <h3>Natasha Abigall</h3>
                                     <p>Cape Town</p>
                                 </div>
-                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                <div class="tinder-user-interaction d-flex justify-content-evenly align-items-center">
                                     <button>
                                         <img src="assets/images/icon/gift.svg" alt="">
                                     </button>
@@ -135,7 +135,7 @@
                                     </a>
                                     <p>Cape Town</p>
                                 </div>
-                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                <div class="tinder-user-interaction d-flex justify-content-evenly align-items-center">
                                     <button>
                                         <img src="assets/images/icon/gift.svg" alt="">
                                     </button>
@@ -158,7 +158,7 @@
                                     </a>
                                     <p>Cape Town</p>
                                 </div>
-                                <div class="tinder-suer-interaction d-flex justify-content-evenly align-items-center">
+                                <div class="tinder-user-interaction d-flex justify-content-evenly align-items-center">
                                     <button>
                                         <img src="assets/images/icon/gift.svg" alt="">
                                     </button>
