--- a/spotlight.html
+++ b/spotlight.html
@@ -23,7 +23,11 @@
     <header class="header-wrap shadow-2 py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <div></div>
+                <div>
+                    <button id="back-button">
+                        <img src="assets/images/icon/arrow-back.svg" alt="">
+                    </button>
+                </div>
                 <div class="d-flex">
                     <div class="me-4">
                         <a href="search.html">
@@ -153,6 +157,14 @@
     <script src="assets/js/jquery-3.6.4.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <!-- Arrow Back -->
+    <script>
+        const backButton = document.getElementById("back-button");
+
+        backButton.addEventListener("click", function () {
+            history.back();
+        });
+    </script>
 </body>
 
 </html>
